--- a/roles/node/templates/kubelet.service.j2
+++ b/roles/node/templates/kubelet.service.j2
@@ -20,6 +20,13 @@ ExecStart=/bin/sh -c '/usr/local/bin/kubelet \
   --tls-private-key-file=/etc/kubelet/kubelet-key.pem \
   --network-plugin=cni \
   --node-ip={{ ansible_host }} \
+  --anonymous-auth=false \
+  --read-only-port=0 \
+  --streaming-connection-idle-timeout=1h \
+  --protect-kernel-defaults=true \
+  --keep-terminated-pod-volumes=false \
+  --event-qps=0 \
+  --cadvisor-port=0 \
   2>&1 | tee -a /var/log/kubelet.log '
 Restart=on-failure
 ResetSec=5
